refactor(service): private 메서드 사용 및 줄바꿈 변경